2009-04-15  Philip Withnall  <philip@tecnocode.co.uk>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_show), (bacon_video_widget_hide),
	(bacon_video_widget_expose_event),
	(bacon_video_widget_size_allocate), (bacon_video_widget_init),
	(bvw_handle_application_message), (bvw_handle_element_message),
	(bacon_video_widget_set_show_cursor):
	* src/backend/bacon-video-widget-xine.c (load_video_out_driver),
	(xine_event), (bacon_video_widget_unrealize),
	(bacon_video_widget_expose), (bacon_video_widget_show),
	(bacon_video_widget_hide), (bacon_video_widget_size_allocate),
	(bacon_video_widget_set_show_cursor),
	(bacon_video_widget_set_scale_ratio): Patches from Víctor Manuel
	Jáquez Leal <vjaquez@igalia.com> to use proper GtkWidget accessors
	in BaconVideoWidget. (Helps: #578591)

2009-04-15  Philip Withnall  <philip@tecnocode.co.uk>

	* src/backend/bacon-video-widget-gst-0.10.c (resize_video_window),
	(bacon_video_widget_init), (bacon_video_widget_set_zoom),
	(bacon_video_widget_get_zoom):
	* src/backend/bacon-video-widget-xine.c
	(bacon_video_widget_realize), (bacon_video_widget_set_zoom),
	(bacon_video_widget_get_zoom):
	* src/backend/bacon-video-widget.h:
	* src/totem-object.c (totem_action_zoom),
	(totem_action_zoom_relative):
	* src/totem-private.h: Change bacon_video_widget_set_zoom to take a
	double. (Closes: #577961)

2009-04-15  Philip Withnall  <philip@tecnocode.co.uk>

	* src/backend/bacon-video-widget-common.c
	(bacon_video_widget_common_get_vis_quality):
	* src/backend/bacon-video-widget-common.h:
	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_set_audio_out_type),
	(bacon_video_widget_dvd_event),
	(bacon_video_widget_set_visuals_quality),
	(bacon_video_widget_set_aspect_ratio),
	(bvw_get_color_balance_channel),
	(bacon_video_widget_get_video_property),
	(bacon_video_widget_set_video_property), (get_metadata_type_name),
	(bacon_video_widget_get_metadata_string),
	(bacon_video_widget_get_metadata_int),